--- a/courses.html
+++ b/courses.html
@@ -22,7 +22,7 @@
             </button>
             
             <ul class="nav-links">
-                <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="courses.html" class="active"><i class="fas fa-book"></i> Courses</a></li>
                 <li><a href="dashboard.html"><i class="fas fa-gamepad"></i> Dashboard</a></li>
                 <li><a href="parent.html"><i class="fas fa-user-shield"></i> Parents</a></li>
