--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </button>
             
             <ul class="nav-links">
-                <li><a href="home.html" class="active"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="courses.html"><i class="fas fa-book"></i> Courses</a></li>
                 <li><a href="dashboard.html"><i class="fas fa-gamepad"></i> Dashboard</a></li>
                 <li><a href="parent.html"><i class="fas fa-user-shield"></i> Parents</a></li>
