--- a/login.html
+++ b/login.html
@@ -304,7 +304,7 @@
         <div class="footer-content">
             <p>Safe learning adventures start here! 🚀</p>
             <div class="footer-links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="courses.html">Courses</a>
                 <a href="parent.html">Parents</a>
                 <a href="#" onclick="showPrivacy()">Privacy</a>
