--- a/parent.html
+++ b/parent.html
@@ -97,7 +97,7 @@
             </button>
             
             <ul class="nav-links">
-                <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="courses.html"><i class="fas fa-book"></i> Courses</a></li>
                 <li><a href="dashboard.html"><i class="fas fa-gamepad"></i> Kid's View</a></li>
                 <li><a href="parent.html" class="active"><i class="fas fa-user-shield"></i> Parent Dashboard</a></li>
